--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Portifólio Caio</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link  rel= "apple-touch-icon"  sizes= "57x57"  href= "/apple-icon-57x57.png" > 
+<link  rel= "apple-touch-icon"  sizes= "60x60"  href= "/apple -icon-60x60.png" > 
+<link  rel= "apple-touch-icon"  tamanhos= "72x72"  href= "/apple-icon-72x72.png" > 
+<link  rel= "apple-touch-icon"  tamanhos= "76x76"  href= "/apple-icon-76x76.png" > 
+<link  rel= "apple-touch-icon" size  = "114x114"  href= "/apple-icon-114x114.png"> 
+<link  rel= "apple-touch-icon"  tamanhos= "120x120"  href= "/apple-icon-120x120.png" > 
+<link  rel= "apple-touch-icon"  tamanhos= "144x144"  href= "/ apple-icon-144x144.png" > 
+<link  rel= tamanhos "apple-touch-icon"  = "152x152"  href= "/apple-icon-152x152.png" > 
+<link  rel= tamanhos "apple-touch-icon"  = "180x180"  href= "/apple-icon-180x180.png" > 
+<link  rel= "ícone"  type= "imagem/png"  tamanhos= "192x192"  href= "/android-icon-192x192.png" > 
+<link  rel= "icon"  type= "image/png"  sizes= "32x32"  href= "/favicon-32x32.png" > 
+<link  rel= "icon"  type= "image/png" size  = "96x96"  href= "/favicon-96x96.png" > 
+<link  rel= "icon"  type= "image/png"  sizes= "16x16"  href= "/favicon-16x16. png" > 
+<link  rel= "manifesto" href= "/manifest.json" > 
+<meta  name="msapplication-TileColor"  content= "#ffffff" > 
+<meta  name= "msapplication-TileImage"  content= "/ms-icon-144x144.png" > 
+<meta  name= "theme-color"  content= "#ffffff" >
   <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
   <script src='main.js'></script>
   <link
