--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Portifólio Caio</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link  rel= "apple-touch-icon"  sizes= "57x57"  href= "/apple-icon-57x57.png" > 
-<link  rel= "apple-touch-icon"  sizes= "60x60"  href= "/apple -icon-60x60.png" > 
-<link  rel= "apple-touch-icon"  tamanhos= "72x72"  href= "/apple-icon-72x72.png" > 
-<link  rel= "apple-touch-icon"  tamanhos= "76x76"  href= "/apple-icon-76x76.png" > 
-<link  rel= "apple-touch-icon" size  = "114x114"  href= "/apple-icon-114x114.png"> 
-<link  rel= "apple-touch-icon"  tamanhos= "120x120"  href= "/apple-icon-120x120.png" > 
-<link  rel= "apple-touch-icon"  tamanhos= "144x144"  href= "/ apple-icon-144x144.png" > 
-<link  rel= tamanhos "apple-touch-icon"  = "152x152"  href= "/apple-icon-152x152.png" > 
-<link  rel= tamanhos "apple-touch-icon"  = "180x180"  href= "/apple-icon-180x180.png" > 
-<link  rel= "ícone"  type= "imagem/png"  tamanhos= "192x192"  href= "/android-icon-192x192.png" > 
-<link  rel= "icon"  type= "image/png"  sizes= "32x32"  href= "/favicon-32x32.png" > 
-<link  rel= "icon"  type= "image/png" size  = "96x96"  href= "/favicon-96x96.png" > 
-<link  rel= "icon"  type= "image/png"  sizes= "16x16"  href= "/favicon-16x16. png" > 
-<link  rel= "manifesto" href= "/manifest.json" > 
-<meta  name="msapplication-TileColor"  content= "#ffffff" > 
-<meta  name= "msapplication-TileImage"  content= "/ms-icon-144x144.png" > 
-<meta  name= "theme-color"  content= "#ffffff" >
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple -icon-60x60.png">
+  <link rel="apple-touch-icon" tamanhos="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" tamanhos="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" size="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" tamanhos="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" tamanhos="144x144" href="/ apple-icon-144x144.png">
+  <link rel=tamanhos "apple-touch-icon"="152x152" href="/apple-icon-152x152.png">
+  <link rel=tamanhos "apple-touch-icon"="180x180" href="/apple-icon-180x180.png">
+  <link rel="ícone" type="imagem/png" tamanhos="192x192" href="/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" size="96x96" href="/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16. png">
+  <link rel="manifesto" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
   <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
   <script src='main.js'></script>
-  <link
-  rel="stylesheet"
-  href="https://use.fontawesome.com/releases/v6.2.0/css/all.css"/>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
 </head>
+
 <body>
   <header>
     <nav id="navbar">
@@ -47,7 +47,8 @@
             <h1>Olá, sou Caio Félix</h1>
             <p>
               Sou Programador Web, focado em full stack.
-              busco ingressar na area de programação Web. Formado em Analise e Desenvolvimento de Sistemas pela UNOPAR, e especificação em Programador Web no SENAC Minas.
+              busco ingressar na area de programação Web. Formado em Analise e Desenvolvimento de Sistemas pela UNOPAR,
+              e especificação em Programador Web no SENAC Minas.
           </td>
           <td><img src="profile.jpg"> </td>
         </tr>
@@ -56,61 +57,41 @@
     <section id="projetos">
       <h2>Aqui estão alguns dos meus Trabalhos</h2>
       <div class="projetos-titulo">
-        <a
-          href="https://caio-dev77.github.io/COBRA/"
-          target="_blank">
+        <a href="https://caio-dev77.github.io/COBRA/" target="_blank">
           <figure>
-            <img
-              src="snake.jpg"
-              alt="Jogo Snake"/>
+            <img src="snake.jpg" alt="Jogo Snake" />
             <figcaption>Jogo Snake</figcaption>
           </figure>
         </a>
-        <a
-          href="https://caio-dev77.github.io/Eleicoes/"
-          target="_blank">
+        <a href="https://caio-dev77.github.io/Eleicoes/" target="_blank">
           <figure>
-            <img
-              src="Eleicoes.jpg"
-              alt="Pesquisa Eleitoral"/>
+            <img src="Eleicoes.jpg" alt="Pesquisa Eleitoral" />
             <figcaption>Pesquisa Eleitoral</figcaption>
           </figure>
         </a>
-        <a
-          href="https://caio-dev77.github.io/jogo-da-memoria/"
-          target="_blank">
+        <a href="https://caio-dev77.github.io/jogo-da-memoria/" target="_blank">
           <figure>
-            <img
-              src="jogo da memoria.jpg"
-              alt="Jogo da Memoria Super Mario Word"/>
+            <img src="jogo da memoria.jpg" alt="Jogo da Memoria Super Mario Word" />
             <figcaption>Jogo da Memoria Super Mario Word</figcaption>
           </figure>
         </a>
-        
-    </div>
-    <a href="https://github.com/caio-dev77?tab=repositories" target="_blank">
-      Mostar Tudo </a>
+
+      </div>
+      <a href="https://github.com/caio-dev77?tab=repositories" target="_blank">
+        Mostar Tudo </a>
     </section>
     <section id="contato">
       <h2>Formas de Contato comigo:</h2>
       <p>Esses são minhas redes sociais e contato</p>
       <ul>
         <li>
-          <a
-            id="git-hub"
-            href="https://github.com/caio-dev77"
-            target="_blank"
-            ><i class="fab fa-github"></i>GitHub</a
-          >
+          <a id="git-hub" href="https://github.com/caio-dev77" target="_blank"><i class="fab fa-github"></i>GitHub</a>
         </li>
         <li>
-          <a href="https://www.instagram.com/caioffelix/" target="_blank"
-            ><i class="fab fa-instagram"></i>Instagram</a
-          >
+          <a href="https://www.instagram.com/caioffelix/" target="_blank"><i class="fab fa-instagram"></i>Instagram</a>
         </li>
         <li>
-          <a href="https://wa.me/5531989387651" target="_blank"
-            ><i class="fas fa-mobile-alt"></i>WhatsApp</a>
+          <a href="https://wa.me/5531989387651" target="_blank"><i class="fas fa-mobile-alt"></i>WhatsApp</a>
         </li>
       </ul>
     </section>
@@ -120,6 +101,7 @@
       Portifólio de Caio Félix
     </p>
   </footer>
-    
+
 </body>
+
 </html>
