--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li><a href="#bem-vindo">Sobre</a></li>
         <li><a href="#projetos">Trabalhos</a></li>
         <li><a href="#contato">Contatos</a></li>
-        <li><a href="Currículo Caio F.pdf" target="_blank">Currículo</a></li>
+        <!-- <li><a href="Currículo Caio F.pdf" target="_blank">Currículo</a></li> -->
       </ul>
     </nav>
   </header>
@@ -87,7 +87,7 @@
     </section>
     <section id="contato">
       <h2>Formas de Contato comigo:</h2>
-      <p>Esses são minhas redes sociais e contato</p>
+      <p>Essas são minhas redes sociais e contato</p>
       <ul>
         <li>
           <a id="git-hub" href="https://github.com/caio-dev77" target="_blank"><i class="fab fa-github"></i>GitHub</a>
@@ -96,7 +96,13 @@
           <a href="https://www.instagram.com/caioffelix/" target="_blank"><i class="fab fa-instagram"></i>Instagram</a>
         </li>
         <li>
-          <a href="https://wa.me/5531989387651" target="_blank"><i class="fas fa-mobile-alt"></i>WhatsApp</a>
+          <a href="https://wa.me/5531989387651" target="_blank"><i class="fa-brands fa-whatsapp"></i>WhatsApp</a>
+        </li>
+        <li>
+          <a href="Currículo Caio F.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i>Currículo</a>
+        </li>
+        <li>
+          <a href="mailto:caio1500@yahoo.com.br?subject= Ola Caio" target="_blank"><i class="fa-solid fa-square-envelope"></i>E-mail</a>
         </li>
       </ul>
     </section>
