--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <li><a href="#bem-vindo">Sobre</a></li>
         <li><a href="#projetos">Trabalhos</a></li>
         <li><a href="#contato">Contatos</a></li>
-        <!-- <li><a href="Currículo Caio F.pdf" target="_blank">Currículo</a></li> -->
       </ul>
+      
     </nav>
   </header>
   <main>
@@ -52,7 +52,7 @@
             <h1>Olá, sou Caio Félix</h1>
             <p>
               Sou Programador Web, focado em full stack.
-              busco ingressar na area de programação Web. Formado em Analise e Desenvolvimento de Sistemas pela UNOPAR,
+              busco ingressar na area de programação Web. <br>Formado em Analise e Desenvolvimento de Sistemas pela UNOPAR,
               e especificação em Programador Web no SENAC Minas.
           </td>
           <td><img src="profile.jpg"> </td>
@@ -84,25 +84,30 @@
       </div>
       <a href="https://github.com/caio-dev77?tab=repositories" target="_blank">
         Mostar Tudo </a>
+
+        <p><img id="qr" src="Portf_lio_Caio_F_lix.png"></p>
     </section>
     <section id="contato">
       <h2>Formas de Contato comigo:</h2>
       <p>Essas são minhas redes sociais e contato</p>
       <ul>
         <li>
-          <a id="git-hub" href="https://github.com/caio-dev77" target="_blank"><i class="fab fa-github"></i>GitHub</a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/caioffelix/" target="_blank"><i class="fab fa-instagram"></i>Instagram</a>
+          <a href="mailto:caio1500@yahoo.com.br?subject= Ola Caio" target="_blank"><i class="fa-solid fa-square-envelope"></i>E-mail</a>
         </li>
         <li>
           <a href="https://wa.me/5531989387651" target="_blank"><i class="fa-brands fa-whatsapp"></i>WhatsApp</a>
         </li>
         <li>
-          <a href="Currículo Caio F.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i>Currículo</a>
+          <a href="https://www.instagram.com/caioffelix/" target="_blank"><i class="fab fa-instagram"></i>Instagram</a>
         </li>
         <li>
-          <a href="mailto:caio1500@yahoo.com.br?subject= Ola Caio" target="_blank"><i class="fa-solid fa-square-envelope"></i>E-mail</a>
+          <a id="git-hub" href="https://github.com/caio-dev77" target="_blank"><i class="fab fa-github"></i>GitHub</a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/caio-f%C3%A9lix-83581079" target="_blank"><i class="fa-brands fa-linkedin"></i></i>Linkedin</a>
+        </li>
+        <li>
+          <a href="Currículo Caio F.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i>Currículo</a>
         </li>
       </ul>
     </section>
