--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Portifólio Caio</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 
-  <!-- favicon inicio -->
+  <!-- favicon início -->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
